[package]
name = "gchat"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
regex = "1.10"
rodio = "0.17.3"  # For audio playback
log = "0.4"
env_logger = "0.11"
toml = "0.9.5"
dirs = "6.0.0"

[[bin]]
name = "gchat"
path = "src/main.rs"
